--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
   </head>
   <body>
     <h1>
-    <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im VipulM. Hi, Im VipulM", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
-      <span class="wrap"></span>
-    </a>
+      <div class="typewriterr">
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im VipulM. Hi, Im VipulM", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+          <span class="wrap"></span>
+        </a>
+      </div>
+
   </h1>
 
     <!-- Optional JavaScript -->
